graphics/opencolorio/files/log
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp: In function 'std::string OpenColorIO_v2_5::GetICCProfilePath(CGDirectDisplayID)':
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:75:29: error: 'CGColorSpaceCopyICCData' was not declared in this scope; did you mean 'CGColorSpaceCopyName'?
   75 |     CFDataRef profileData = CGColorSpaceCopyICCData(colorSpace);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~
      |                             CGColorSpaceCopyName
/opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:92:45: error: cannot convert 'CFDataRef' {aka 'const __CFData*'} to 'const CMProfileLocation*'
   92 |     CMError err = CMOpenProfile(&cmProfile, profileData);
      |                                             ^~~~~~~~~~~
      |                                             |
      |                                             CFDataRef {aka const __CFData*}
In file included from /System/Library/Frameworks/ApplicationServices.framework/Frameworks/QD.framework/Headers/QD.h:29,
                 from /System/Library/Frameworks/ApplicationServices.framework/Headers/ApplicationServices.h:30,
                 from /opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:20:
/System/Library/Frameworks/ApplicationServices.framework/Frameworks/ColorSync.framework/Headers/ColorSyncDeprecated.h:1961:30: note:   initializing argument 2 of 'CMError CMOpenProfile(OpaqueCMProfileRef**, const CMProfileLocation*)'
 1961 |   const CMProfileLocation *  theProfile)                      AVAILABLE_MAC_OS_X_VERSION_10_0_AND_LATER;
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
In file included from /System/Library/Frameworks/CoreFoundation.framework/Headers/CFString.h:10,
                 from /System/Library/Frameworks/CoreFoundation.framework/Headers/CFError.h:33,
                 from /System/Library/Frameworks/CoreFoundation.framework/Headers/CFBundle.h:11,
                 from /System/Library/Frameworks/CoreFoundation.framework/Headers/CoreFoundation.h:43,
                 from /opt/local/var/macports/build/opencolorio-573303f6/work/OpenColorIO-2.5.1/src/OpenColorIO/SystemMonitor_macos.cpp:19:
/System/Library/Frameworks/CoreFoundation.framework/Headers/CFData.h:12:22: note: class type 'const __CFData' is incomplete
   12 | typedef const struct __CFData * CFDataRef;
      |                      ^~~~~~~~
make[2]: *** [src/OpenColorIO/CMakeFiles/OpenColorIO.dir/SystemMonitor.cpp.o] Error 1
make[2]: Leaving directory `/opt/local/var/macports/build/opencolorio-573303f6/work/build'
make[1]: *** [src/OpenColorIO/CMakeFiles/OpenColorIO.dir/all] Error 2